[gd_scene load_steps=5 format=3 uid="uid://eik7s0783a8f"]

[ext_resource type="Script" uid="uid://ceo84vp65dwvq" path="res://Scripts/3D/Entities/player.gd" id="1_nc6jm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sh265"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nc6jm"]
height = 1.55

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4flbx"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 16
collision_mask = 7
script = ExtResource("1_nc6jm")

[node name="StandingHitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_sh265")

[node name="CrouchingHitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_nc6jm")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_4flbx")

[node name="SwivelHead" type="Node3D" parent="MeshInstance3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.8, 0)

[node name="Camera3D" type="Camera3D" parent="MeshInstance3D/SwivelHead"]

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
target_position = Vector3(0, 2, 0)
